--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* 
     Theme Name: Desilicious Theme
-    Description: This is awesome theme sabi ni kuya Jepoy
+    Description: This is awesome theme sabi ni kuya Joven
     Version: 1.0
     Author: Ben Hansom
     
