--- a/style/main.css
+++ b/style/main.css
@@ -1500,7 +1500,7 @@ img {
   align-items: center;
   display: flex;
   flex-direction: column;
-  
+
   padding-bottom: 5rem;
 }
 .menuList__content img {
@@ -1656,7 +1656,7 @@ img {
     width: 100%;
     grid-row: 2/3;
   }
-} /*# sourceMappingURL=main.min.css.map */
+}
 
 .single_wrapper {
   max-width: 800px;
@@ -1740,9 +1740,99 @@ img {
   }
 }
 
-.productBanner__card img{
+.productBanner__card img {
   object-fit: cover;
   width: 20rem;
   height: 13rem;
   border-radius: 50%;
+}
+
+.cart {
+  position: fixed;
+  top: 50px;
+  right: 0;
+  padding: 1.6rem;
+  z-index: 99999;
+  width: 300px;
+  height: 100dvh;
+  background: #0e1516;
+  display: none;
+}
+.cart.open {
+  display: block;
+}
+
+.cart h3 {
+  margin-bottom: 20px;
+}
+
+.cart .cart-item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.cart .cart-item img {
+  width: 80px;
+  height: 80px;
+
+  object-fit: cover;
+}
+
+.cart-body {
+  max-height: 600px;
+  overflow-y: auto;
+}
+
+.cart-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cart-header button {
+  border: none;
+  background-color: transparent;
+  color: #fff;
+  font-size: 20px;
+}
+
+.cart ul {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-cart {
+  position: relative;
+}
+
+.header-cart span {
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  background-color: red;
+  color: #fff;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  font-size: 10px;
+  display: none;
+}
+
+.header-cart span.show {
+  display: flex;
+}
+
+.nav {
+  display: flex;
+  gap: 50px;
+}
+
+.nav button {
+  background: transparent;
+  border: none;
+  font-size: 18px;
+  color: white;
+  cursor: pointer;
 }
